# quant

./: README.md  pyproject.toml
datas/baostock/: bs_sh.000905.csv  bs_sh.600000.csv
src/jupyter/: demo.ipynb  quant.ipynb
src/quant/: demo.py  getonlinedata.py  section-a.py  section-b.py  sectiona.py
