[tool.poetry]
name = "quant"
version = "0.1.0"
description = ""
authors = ["panoshu <panos.hu@outlook.com>"]
readme = "README.md"
packages = [{include = "quant", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
