[tool.poetry]
name = "quant"
version = "0.1.0"
description = ""
authors = ["panoshu <panos.hu@outlook.com>"]
readme = "README.md"
packages = [{include = "quant", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
backtrader = {git = "https://github.com/backtrader2/backtrader.git"}
btplotting = {git = "https://github.com/happydasch/btplotting.git"}
baostock = "^0.8.8"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
